--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "request": "^2.87.0",
     "sprintf-js": "^1.1.1",
     "superfly-timeline": "^6.0.3",
+    "threadedclass": "^0.0.7",
     "underscore": "^1.9.1",
     "underscore-deep-extend": "^1.1.5",
     "ws": "^6.1.0"
